--- a/roles/install_default_wildfly/vars/main.yml
+++ b/roles/install_default_wildfly/vars/main.yml
@@ -6,4 +6,4 @@ var_wildfly_archive_dest: /tmp/wildfly-27.0.0.Final.tar.gz
 var_tmp_wildfly_dest_folder: /opt/wildfly-27.0.0.Final
 var_group: wildfly
 var_user: wildfly
-var_wildfly_service_dest: /opt/wildfly
+var_wildfly_etc_config_dest: /etc/wildfly/wildfly.conf
